# Expectre

./: .clang-format  .gitignore  .gitmodules  .sconsign.dblite  CMakeLists.txt  CMakeUserPresets.json  Makefile  README.md  SConstruct  conanfile.txt  graph.html  mingwBuild.bat  out.html  out.txt  vcpkg.json
assets/teapot/: teapot.mtl
assets/ui/: MainView.xaml
cmake/: FindSDL2.cmake
lib/sdl2webgpu/: sdl2webgpu.h
lib/sdl2webgpu/examples/: hello-sdl2webgpu.c
shaders/: frag.frag  frag.frag.spv  frag.spv  vert.spv  vert.vert  vert.vert.spv
src/: AppTime.h  Engine.cpp  Engine.h  ExTexture.h  FastLZ.cpp  FastLZ.h  IRenderer.h  IRendererInfo.h  IUIRenderer.h  Material.h  MaterialManager.cpp  MaterialManager.h  MathUtils.h  Mesh.h  MeshManager.cpp  MeshManager.h  NoesisShaders.h  RenderContextVk.cpp  RenderContextVk.h  RenderResourceManager.cpp  RenderResourceManager.h  RenderableInfo.h  RendererDx.cpp  RendererDx.h  RendererVk.cpp  RendererVk.h  RendererWgpu.cpp  RendererWgpu.h  Resource.h  ResourceHandle.h  ResourceManager.h  ShaderFileWatcher.h  TODO  Texture.h  TextureManager.cpp  TextureManager.h  TextureVk.h  Time.h  ToolsVk.h  UIRendererVkNoesis.cpp  (+10 more)
src/input/: InputManager.cpp  InputManager.h
src/noesis/: NoesisInputAdapter.h  NoesisUI.cpp  NoesisUI.h  RenderTargetVkNs.h  TextureVkNs.h
src/scene/: Camera.cpp  Camera.h  CameraComponent.h  Component.h  Entity.h  MeshComponent.h  Scene.cpp  Scene.h  SceneLoader.h  SceneObject.cpp  SceneObject.h  SceneRoot.h  TransformComponent.h
test/: main.cpp
